--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ div.fadeIn {
 
 @media screen and (max-width: 554px) {
   body{
-    overflow: hidden;
+    overflow-x: hidden;
     }
   main {
     width: 100vw;
